--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">The Diary</string>
     <string name="add_word">Add Page</string>
+    <string name="my_first_page_of_diary_looks_awesome">My first page of diary looks awesome !!</string>
+    <string name="contenttext">Today was awesome day of my life i resumed my intense study after a lot of day and i am feeling better it\'s awesome feeling also i gave a awesome viva of subject software engg.</string>
 </resources>
